# kotonoha-apis

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
kotonoha_api/: .env  auth.py  firebase_utils.py  main.py  privacy_policy.txt  schema.yml
