[tool.poetry]
name = "kotonoha-apis"
version = "0.1.0"
description = ""
authors = ["ShinnosukeUesaka <shinnosuke.uesaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.0"
fastapi = "^0.104.1"
firebase-admin = "^6.2.0"
uvicorn = "^0.24.0.post1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
